# isotope

./: .gitignore  Cargo.toml
.github/workflows/: test.yml
isotope-ssa/: Cargo.toml
isotope-ssa/src/: builder.rs  lib.rs  primitive.rs  types.rs
isotope-syntax/: Cargo.toml
isotope-syntax/src/: ident.rs  lib.rs  primitive.rs
