[package]
name = "isotope-ssa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
egg-isotope = { git = "https://github.com/imbrem/egg", branch = "isotope-fork" }
parking_lot = "0.12.1"
smallvec = "1.11.1"

[dev-dependencies]
proptest = "1.3.1"
