[package]
name = "isotope-ssa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isotope-syntax = { path = "../isotope-syntax" }

anyhow = "1.0.75"
# Note: we use the main branch for the mutable analysis feature in issue #277
egg = { git = "https://github.com/egraphs-good/egg", branch = "main" }
parking_lot = "0.12.1"
smallvec = "1.11.1"
winnow = "0.5.16"
indexmap = "2.0.2"

[dev-dependencies]
proptest = "1.3.1"
